--- a/Muhammad_Reza_Utama___Submission_1.ipynb
+++ b/Muhammad_Reza_Utama___Submission_1.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2Pu0xPXg8BXAED2oWOekE",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyP1i017kH1DDzWTwxg0P/Cu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -298,21 +299,21 @@
       "source": [
         "#mendefenisikan model sequential\n",
         "model = tf.keras.models.Sequential([\n",
-        "    tf.keras.layers.Conv2D(16, (3,3), activation='relu', input_shape=(100, 150, 3)),\n",
+        "    tf.keras.layers.Conv2D(16, (3,3), activation='relu', name=\"layer1\",input_shape=(100, 150, 3)),\n",
         "    tf.keras.layers.MaxPooling2D(2, 2),\n",
-        "    tf.keras.layers.Conv2D(32, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.Conv2D(32, (3,3), activation='relu', name=\"layer2\"),\n",
         "    tf.keras.layers.MaxPooling2D(2,2),\n",
-        "    tf.keras.layers.Conv2D(64, (3,3), activation='relu'),\n",
+        "    tf.keras.layers.Conv2D(64, (3,3), activation='relu',name=\"layer3\"),\n",
         "    tf.keras.layers.MaxPooling2D(2,2),\n",
         "    tf.keras.layers.Flatten(),\n",
-        "    tf.keras.layers.Dense(512, activation='relu'),\n",
+        "    tf.keras.layers.Dense(512, activation='relu', name=\"layer4\"),\n",
         "    tf.keras.layers.Dense(3, activation='softmax')\n",
         "])"
       ],
       "metadata": {
         "id": "TzYm-nf6qaMc"
       },
-      "execution_count": 12,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -325,7 +326,7 @@
       "metadata": {
         "id": "AwWPZhZy__1y"
       },
-      "execution_count": 13,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -344,65 +345,65 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Gr7rNTNCAF3_",
-        "outputId": "f0d742af-f1bb-4bb3-a65b-7956361ba50d"
+        "outputId": "2714235b-9b02-4b54-ca69-6d6e4564fd38"
       },
-      "execution_count": 14,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Epoch 1/20\n",
-            "32/32 - 4s - loss: 1.2722 - accuracy: 0.1562 - val_loss: 1.0995 - val_accuracy: 0.3242 - 4s/epoch - 116ms/step\n",
+            "32/32 - 3s - loss: 1.3242 - accuracy: 0.3125 - val_loss: 1.1021 - val_accuracy: 0.3320 - 3s/epoch - 104ms/step\n",
             "Epoch 2/20\n",
-            "32/32 - 3s - loss: 1.0979 - accuracy: 0.3438 - val_loss: 1.0849 - val_accuracy: 0.3555 - 3s/epoch - 82ms/step\n",
+            "32/32 - 3s - loss: 1.1038 - accuracy: 0.2812 - val_loss: 1.1187 - val_accuracy: 0.2891 - 3s/epoch - 81ms/step\n",
             "Epoch 3/20\n",
-            "32/32 - 3s - loss: 1.1019 - accuracy: 0.3125 - val_loss: 1.0995 - val_accuracy: 0.2656 - 3s/epoch - 79ms/step\n",
+            "32/32 - 3s - loss: 1.1529 - accuracy: 0.3750 - val_loss: 1.0971 - val_accuracy: 0.3555 - 3s/epoch - 82ms/step\n",
             "Epoch 4/20\n",
-            "32/32 - 3s - loss: 1.0977 - accuracy: 0.3750 - val_loss: 1.0870 - val_accuracy: 0.5117 - 3s/epoch - 92ms/step\n",
+            "32/32 - 3s - loss: 1.1040 - accuracy: 0.3438 - val_loss: 1.1136 - val_accuracy: 0.3477 - 3s/epoch - 82ms/step\n",
             "Epoch 5/20\n",
-            "32/32 - 3s - loss: 1.1317 - accuracy: 0.4062 - val_loss: 1.0828 - val_accuracy: 0.3555 - 3s/epoch - 91ms/step\n",
+            "32/32 - 3s - loss: 1.1364 - accuracy: 0.3750 - val_loss: 1.0992 - val_accuracy: 0.3047 - 3s/epoch - 82ms/step\n",
             "Epoch 6/20\n",
-            "32/32 - 3s - loss: 1.1794 - accuracy: 0.3438 - val_loss: 1.0775 - val_accuracy: 0.6992 - 3s/epoch - 81ms/step\n",
+            "32/32 - 3s - loss: 1.1156 - accuracy: 0.3438 - val_loss: 1.0951 - val_accuracy: 0.3125 - 3s/epoch - 86ms/step\n",
             "Epoch 7/20\n",
-            "32/32 - 3s - loss: 1.0474 - accuracy: 0.5000 - val_loss: 0.9534 - val_accuracy: 0.6406 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 1.0921 - accuracy: 0.5938 - val_loss: 1.0839 - val_accuracy: 0.3398 - 3s/epoch - 81ms/step\n",
             "Epoch 8/20\n",
-            "32/32 - 3s - loss: 1.0792 - accuracy: 0.4688 - val_loss: 0.9517 - val_accuracy: 0.4219 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 1.1185 - accuracy: 0.4062 - val_loss: 1.0378 - val_accuracy: 0.5000 - 3s/epoch - 83ms/step\n",
             "Epoch 9/20\n",
-            "32/32 - 3s - loss: 0.9417 - accuracy: 0.6250 - val_loss: 1.0052 - val_accuracy: 0.4219 - 3s/epoch - 82ms/step\n",
+            "32/32 - 3s - loss: 1.0551 - accuracy: 0.5625 - val_loss: 0.8437 - val_accuracy: 0.5586 - 3s/epoch - 85ms/step\n",
             "Epoch 10/20\n",
-            "32/32 - 3s - loss: 0.9994 - accuracy: 0.5312 - val_loss: 0.7641 - val_accuracy: 0.5859 - 3s/epoch - 79ms/step\n",
+            "32/32 - 3s - loss: 0.9390 - accuracy: 0.5000 - val_loss: 0.9226 - val_accuracy: 0.5508 - 3s/epoch - 83ms/step\n",
             "Epoch 11/20\n",
-            "32/32 - 3s - loss: 0.7277 - accuracy: 0.5938 - val_loss: 0.7057 - val_accuracy: 0.7227 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 0.8420 - accuracy: 0.5938 - val_loss: 0.8153 - val_accuracy: 0.5625 - 3s/epoch - 80ms/step\n",
             "Epoch 12/20\n",
-            "32/32 - 3s - loss: 0.6523 - accuracy: 0.7500 - val_loss: 0.6060 - val_accuracy: 0.7188 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 0.8142 - accuracy: 0.6875 - val_loss: 0.6437 - val_accuracy: 0.7891 - 3s/epoch - 82ms/step\n",
             "Epoch 13/20\n",
-            "32/32 - 3s - loss: 0.6917 - accuracy: 0.6875 - val_loss: 0.6430 - val_accuracy: 0.7773 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 0.6484 - accuracy: 0.6562 - val_loss: 0.6931 - val_accuracy: 0.7578 - 3s/epoch - 106ms/step\n",
             "Epoch 14/20\n",
-            "32/32 - 3s - loss: 0.7099 - accuracy: 0.7188 - val_loss: 0.6059 - val_accuracy: 0.7500 - 3s/epoch - 81ms/step\n",
+            "32/32 - 3s - loss: 0.8596 - accuracy: 0.6875 - val_loss: 0.7217 - val_accuracy: 0.7031 - 3s/epoch - 82ms/step\n",
             "Epoch 15/20\n",
-            "32/32 - 3s - loss: 0.4650 - accuracy: 0.8125 - val_loss: 0.5121 - val_accuracy: 0.8008 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 0.7028 - accuracy: 0.5938 - val_loss: 0.6259 - val_accuracy: 0.7578 - 3s/epoch - 83ms/step\n",
             "Epoch 16/20\n",
-            "32/32 - 3s - loss: 0.5859 - accuracy: 0.8438 - val_loss: 0.4975 - val_accuracy: 0.7852 - 3s/epoch - 79ms/step\n",
+            "32/32 - 3s - loss: 0.7431 - accuracy: 0.7500 - val_loss: 0.5602 - val_accuracy: 0.7461 - 3s/epoch - 81ms/step\n",
             "Epoch 17/20\n",
-            "32/32 - 3s - loss: 0.4581 - accuracy: 0.7812 - val_loss: 0.4794 - val_accuracy: 0.8086 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 0.7020 - accuracy: 0.7500 - val_loss: 0.4790 - val_accuracy: 0.8555 - 3s/epoch - 82ms/step\n",
             "Epoch 18/20\n",
-            "32/32 - 3s - loss: 0.3402 - accuracy: 0.9375 - val_loss: 0.4346 - val_accuracy: 0.8398 - 3s/epoch - 82ms/step\n",
+            "32/32 - 3s - loss: 0.4725 - accuracy: 0.8125 - val_loss: 0.4389 - val_accuracy: 0.8164 - 3s/epoch - 84ms/step\n",
             "Epoch 19/20\n",
-            "32/32 - 3s - loss: 0.2937 - accuracy: 0.8750 - val_loss: 1.0119 - val_accuracy: 0.7070 - 3s/epoch - 80ms/step\n",
+            "32/32 - 3s - loss: 0.2711 - accuracy: 0.8750 - val_loss: 0.5774 - val_accuracy: 0.7930 - 3s/epoch - 81ms/step\n",
             "Epoch 20/20\n",
-            "32/32 - 3s - loss: 0.4530 - accuracy: 0.8750 - val_loss: 0.4087 - val_accuracy: 0.8438 - 3s/epoch - 82ms/step\n"
+            "32/32 - 3s - loss: 0.2779 - accuracy: 0.9375 - val_loss: 0.4361 - val_accuracy: 0.8359 - 3s/epoch - 82ms/step\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.callbacks.History at 0x7fc353e13410>"
+              "<keras.callbacks.History at 0x7fc3541aef90>"
             ]
           },
           "metadata": {},
-          "execution_count": 14
+          "execution_count": 20
         }
       ]
     },
